[package]
name = "klotho"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
async-trait = "0.1.51"
futures = "0.3.17"
sqlx = { version = "0.5.9", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
