[package]
name = "lachesis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-std = { version = "1.10.0", features = ["attributes"] }
flexi_logger = { version = "0.19.4", features = ["async", "colors"] }
klotho = { path = "../klotho" }
structopt = "0.3.23"
